# recall

./: .env  .gitignore  app.py  info.json  pyproject.toml  response.text
src/: config.py  exceptions.py  lifespan.py  main.py
src/resources/: config.py  dependencies.py  exceptions.py  http.py  ingest.py  repository.py  router.py  service.py  test.py  types.py  utils.py  worker.py
src/resources/media/: __init__.py  service.py
src/resources/scrapers/: __init__.py  base.py  reddit.py  web.py  youtube.py
tests/: test_app_exceptions.py  test_lifespan.py  test_media_service.py  test_reddit_scraper.py  test_resource_dependencies.py  test_resource_http.py  test_resource_ingest.py  test_resource_resolver_base.py  test_resource_url_normalization.py  test_resource_utils.py  test_youtube_scraper.py
